--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 	<style>
 	#section2{width: 1200px;  margin: 2em; left-padding:3em; margin-bottom: 4em;}
+		#section2 img :hover{ width: 120%;}
 
 	.wrap2{width:300px; height:360px;overflow: hidden; background:#071b15;float:left; margin: 3em;}
 	#title{font-size: 2em; height: 80px; color: white;}
