--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	
 	<style>
 	#section2{width: 1200px;  margin: 2em; left-padding:3em; margin-bottom: 4em;}
-		#section2 img :hover{ width: 120%;}
+	.section2 img:hover{ width: 120%;}
+		
 
 	.wrap2{width:300px; height:360px;overflow: hidden; background:#071b15;float:left; margin: 3em;}
+		.wrap2 img:hover{width:120%;}
 	#title{font-size: 2em; height: 80px; color: white;}
 	#hello{color: white; font-size: 1em; height: 1.6em; margin:0; padding-top: 0.5em; padding-left: 0.5em;padding-right:0.5em;}
 	#pill{font-size: 0.8em; line-height: 1.7em; height:110px; margin:0; padding-left: 0.5em; padding-right:0.5em;}
