--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	
 	<style>
 	#section2{width: 1200px;  margin: 2em; left-padding:3em; margin-bottom: 4em;}
-	.section2 img:hover{ width: 120%;}
+	.section2 img{ width: 100%; transition: 2s;}
+		.section2 img:hover{ width: 120%;}
 		
 
 	.wrap2{width:300px; height:360px;overflow: hidden; background:#071b15;float:left; margin: 3em;}
